# cslibs_indexed_storage

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  todo.md
cmake/: EnableWarnings.cmake  ForceCpp11.cmake  HelperMacros.cmake
dep/googletest/: googletest.cmake
doc/: CMakeLists.txt  Doxyfile.in  data_interface.md  index_interface.md
example/: CMakeLists.txt  array.cpp  auto_index.cpp  clustering.cpp  eigen.cpp  lookup_storage.cpp  non_owning_storage.cpp  test.cpp
example/benchmark/: benchmark.cpp  testdata.hpp  timing.hpp
example/resources/: benchmark_particles.txt
include/cslibs_clustering/: backends.hpp  storage.hpp
include/cslibs_clustering/backend/: data_ops.hpp  kdtree.hpp  kdtree_options.hpp  nested_component_map.hpp  options.hpp
include/cslibs_clustering/backend/array/: array.hpp  array_options.hpp
include/cslibs_clustering/backend/kdtree/: kdtree.hpp  kdtree_options.hpp
include/cslibs_clustering/backend/simple/: map.hpp  map_generic.hpp  nested_component_map.hpp  unordered_component_map.hpp  unordered_map.hpp
include/cslibs_clustering/data/: data.hpp
include/cslibs_clustering/helper/: index_sequence.hpp  options.hpp  parameter.hpp  void_t.hpp
include/cslibs_clustering/index/: index.hpp  index_std.hpp
include/cslibs_clustering/index/std/: array.hpp  tuple.hpp
include/cslibs_clustering/interface/data/: data.hpp  data_interface.hpp  data_merge.hpp  data_storage_hints.hpp
include/cslibs_clustering/interface/data/detail/: data_interface_dense.hpp  data_interface_nonowning.hpp  data_interface_sparse.hpp
include/cslibs_clustering/interface/index/: index.hpp  index_std.hpp
include/cslibs_clustering/interface/index/std/: tuple.hpp
include/cslibs_clustering/operations/: clustering.hpp
include/cslibs_clustering/operations/clustering/: cluster_op_traits.hpp  clustering.hpp  grid_neighborhood.hpp
include/cslibs_clustering/storage/: auto_index_storage.hpp  generic_storage.hpp
include/cslibs_clustering/support/: index.hpp  stl.hpp
include/cslibs_clustering/support/stl/: array.hpp
include/cslibs_indexed_storage/: backends.hpp  storage.hpp
include/cslibs_indexed_storage/backend/: backend_traits.hpp  options.hpp  tags.hpp
include/cslibs_indexed_storage/backend/array/: array.hpp  array_options.hpp
include/cslibs_indexed_storage/backend/kdtree/: kdtree.hpp  kdtree_buffered.hpp  kdtree_options.hpp  kdtree_with_allocator.hpp
include/cslibs_indexed_storage/backend/kdtree/allocator/: buffered_allocator.hpp  ondemand_allocator.hpp
include/cslibs_indexed_storage/backend/simple/: map.hpp  map_generic.hpp  unordered_component_map.hpp  unordered_map.hpp
include/cslibs_indexed_storage/helper/: index_sequence.hpp  static_warning.hpp  void_t.hpp
include/cslibs_indexed_storage/interface/data/: data_interface.hpp  data_merge.hpp  data_storage_hints.hpp
include/cslibs_indexed_storage/interface/data/align/: aligned_allocator.hpp  aligned_array.hpp
include/cslibs_indexed_storage/interface/data/detail/: data_interface_byte_size.hpp  data_interface_dense.hpp  data_interface_nonowning.hpp  data_interface_sparse.hpp
include/cslibs_indexed_storage/interface/index/: index_interface.hpp  index_std.hpp
include/cslibs_indexed_storage/interface/index/std/: tuple.hpp
include/cslibs_indexed_storage/operations/: clustering.hpp
include/cslibs_indexed_storage/operations/clustering/: cluster_op_traits.hpp  clustering.hpp  grid_neighborhood.hpp
include/cslibs_indexed_storage/storage/: auto_index_storage.hpp  generic_storage.hpp
include/cslibs_indexed_storage/utility/: concept_check.hpp  index_sequence.hpp  options.hpp  void_t.hpp
src/: test.cpp
test/: CMakeLists.txt
test/backend/: test_backend_integration.cpp
test/include/cslibs_clustering_test/: data.hpp  testing.hpp
test/include/cslibs_indexed_storage_test/: testing.hpp
test/interface/: test_data_merge.cpp  test_index_std_array.cpp  test_index_std_tuple.cpp  test_interface_data_merge.cpp  test_interface_data_storage_hint_default.cpp  test_interface_data_storage_hint_dense.cpp  test_interface_data_storage_hint_nonowning.cpp
test/operations/byte_size/: test_byte_size.cpp
test/operations/clustering/: test_grid_neighborhood.cpp
test/storage/array/: test_manual_nonowning_array_storage.cpp  test_manual_owning_array_storage.cpp
test/storage/kdtree/: test_manual_nonowning_kdtree_storage.cpp  test_manual_owning_kdtree_storage.cpp
test/support/: test_support_std_array.cpp  test_support_std_tuple.cpp  test_support_stl_array.cpp
test/utility/: test_concept_check.cpp  test_index_sequence.cpp  test_void_t.cpp
