<?xml version="1.0"?>
<package>
  <name>cslibs_indexed_storage</name>
  <version>0.1.0</version>
  <description>
    Library package for fast and flexible indexed data storage.
    Contains operations for common actions on indexed data, e.g. clustering.
  </description>

  <maintainer email="philipp.kuhlmann@student.uni-tuebingen.de">Philipp Kuhlmann</maintainer>
  <author email="philipp.kuhlmann@student.uni-tuebingen.de">Philipp Kuhlmann</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
